--- a/index.html
+++ b/index.html
@@ -6,33 +6,40 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Superappka (standardní varianta)</title>
 	<link rel="stylesheet" href="style.css">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500&display=swap" rel="stylesheet">
 </head>
 <body>
 
 	<div class="obal">
 
 		<!-- menu -->
-		<ul>
-			<li>SUPER APPKA</li>
-			<li><a href="#">Úžasný design</a></li>
-			<li><a href="#">Boží funkce</a></li>
-			<li><a href="#">Zdarma ke stažení</a></li>
-		</ul>
 
+		<div class="menu">
+			<ul class="seznam">
+				<div class="volba"><li>SUPER APPKA</li></div>
+				<div class="volba"><li><a href="#">Úžasný design</a></li></div>
+				<div class="volba"><li><a href="#">Boží funkce</a></li></div>
+				<div class="volba"><li><a href="#">Zdarma ke stažení</a></li></div>
+			</ul>
+		</div>
 
 		<!-- hero sekce / banner -->
-		<h1>Super Appka</h1>
 
-		<p>
-			Úžasná mobilní aplikace,
-			<br> která Ti změní život.
-		</p>
+		<div class="banner">
+			<h1>Super Appka</h1>
 
-		<a href="#">Stáhnout zdarma</a>
-		<a href="#">Více informací</a>
+			<p>
+				Úžasná mobilní aplikace,
+				<br> která Ti změní život.
+			</p>
 
-		<img src="images/telefon.png" alt="Telefon">
+			<a href="#">Stáhnout zdarma</a>
+			<a href="#">Více informací</a>
 
+			<img src="images/telefon.png" alt="Telefon">
+		</div>
 
 
 
