--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 		<div class="menu">
 			<ul class="seznam">
-				<div class="volba"><li>SUPER APPKA</li></div>
+				<div class="volba hlavni"><li>SUPER APPKA</li></div>
 				<div class="volba"><li><a href="#">Úžasný design</a></li></div>
 				<div class="volba"><li><a href="#">Boží funkce</a></li></div>
 				<div class="volba"><li><a href="#">Zdarma ke stažení</a></li></div>
