--- a/index.html
+++ b/index.html
@@ -28,17 +28,22 @@
 		<!-- hero sekce / banner -->
 
 		<div class="banner">
+			<div class="bantext">
 			<h1>Super Appka</h1>
 
-			<p>
+			<p class="podnadpis"> 
 				Úžasná mobilní aplikace,
 				<br> která Ti změní život.
 			</p>
 
-			<a href="#">Stáhnout zdarma</a>
-			<a href="#">Více informací</a>
-
-			<img src="images/telefon.png" alt="Telefon">
+			<div class="tlacitka">
+			<div class="tlacitko leve"><a href="#">Stáhnout zdarma</a></div>
+			<div class="tlacitko prave"><a href="#">Více informací</a></div>
+			</div>
+			</div>
+			<div class="banruka">
+			<img src="images/telefon.png" alt="Telefon" class="telefon">
+			</div>
 		</div>
 
 
